apps/seerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seerr
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: seerr.h18s.lab
      http:
        paths:
          - {
              path: /,
              pathType: Prefix,
              backend: { service: { name: seerr, port: { number: 5055 } } },
            }
